[package]
name = "use-scraper-lambda"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lambda-flows = "0.3.1"
serde_json = "1.0.97"
store-flows = "0.3.1"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt", "sync"] }
web-scraper-flows = "0.1.0"
